# TheiaMCR_C

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  history.txt  pyproject.toml  upload instructions.txt
.github/scripts/: generate_cra_report.py
.github/workflows/: build-release.yml  cra-security-report.yml  release.yml
Examples/cpp/: Example_3.5.cpp
Examples/python/: Example_3.5.py
cmake/: TheiaMCR_CConfig.cmake.in
include/: SimpleSerial.h  TheiaMCR.h  TheiaMCR_C.h
ports/theiamcr-c/: portfile.cmake  usage  vcpkg.json
src/: SimpleSerial.cpp  TheiaMCR.cpp  TheiaMCR_C.cpp  TheiaMCR_pybind11.cpp
tests/: board_simulator.py  test_compare_mcr.py
vcpkg/: portfile.cmake
wiki/: Home.md  Information-and-setting-functions.md  Initialization-functions.md  Motor-movement-functions.md
