[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "theiamcr-c"
version = "3.5.1"
description = "C++ Motor Control Board Interface - Python bindings for Theia MCR IQ 400 motor control board"
readme = "README.md"
license = {file = "license"}
authors = [
    {name = "Theia Technologies", email = "mpeterson@theiatech.com"}
]
requires-python = ">=3.9"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
]
keywords = ["motor control", "MCR", "Theia", "robotics", "lens control"]

[project.urls]
Homepage = "https://github.com/cliquot22/TheiaMCR_C"
Documentation = "https://github.com/cliquot22/TheiaMCR_C/wiki"
Repository = "https://github.com/cliquot22/TheiaMCR_C.git"
Issues = "https://github.com/cliquot22/TheiaMCR_C/issues"

[tool.scikit-build]
cmake.version = ">=3.15"
cmake.build-type = "Release"
wheel.packages = []

[tool.scikit-build.cmake.define]
SKBUILD = "ON"
BUILD_EXAMPLES = "OFF"
